travis/deployment_spec_template.yml
apiVersion: v1
kind: Service
metadata:
  name: lei-issuer
spec:
  selector:
    app: lei-issuer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lei-issuer
  labels:
    app: lei-issuer
spec:
  selector:
    matchLabels:
      app: lei-issuer
  template:
    metadata:
      labels:
        app: lei-issuer
    spec:
      containers:
        - name: lei-issuer
          image: LEI_ISSUER_IMAGE_TAG_HERE
          imagePullPolicy: Always
          ports:
            - name: lei-issuer
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gleif
spec:
  selector:
    app: gleif
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gleif
  labels:
    app: gleif
spec:
  selector:
    matchLabels:
      app: gleif
  template:
    metadata:
      labels:
        app: gleif
    spec:
      containers:
        - name: gleif
          image: GLEIF_IMAGE_TAG_HERE
          imagePullPolicy: Always
          ports:
            - name: gleif
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: acme
spec:
  selector:
    app: acme
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme
  labels:
    app: acme
spec:
  selector:
    matchLabels:
      app: acme
  template:
    metadata:
      labels:
        app: acme
    spec:
      containers:
        - name: acme
          image: ACME_IMAGE_TAG_HERE
          imagePullPolicy: Always
          ports:
            - name: acme
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - protocol: TCP
      name: couchdb
      port: 5984
      targetPort: 5984
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb
          imagePullPolicy: Always
          ports:
            - name: couchdb
              containerPort: 5984
---
apiVersion: v1
kind: Service
metadata:
  name: ift-founder
spec:
  selector:
    app: ift-founder
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ift-founder
  labels:
    app: ift-founder
spec:
  selector:
    matchLabels:
      app: ift-founder
  template:
    metadata:
      labels:
        app: ift-founder
    spec:
      containers:
        - name: ift-founder
          image: IFT_FOUNDER_IMAGE_TAG_HERE
          imagePullPolicy: Always
          ports:
            - name: ift-founder
              containerPort: 3000
